# Face-Recognition-Based-Attendance-System

./: .gitattributes  app.py  attendance.db  attendance_taker.py  features_extraction_to_csv.py  get_faces_from_camera_tkinter.py  main.py  pyproject.toml
templates/: index.html
